# CrossGPU

./: .clippy.toml  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  GETTING_STARTED.md  LICENSE-MIT  Makefile  PROJECT_SUMMARY.md  README.md  SETUP.md  SETUP_COMPLETE.md  STATUS.md  STEP_BY_STEP.md  TEMPLATE_SUMMARY.md  build-wasm.sh  docker-compose.yml  rustfmt.toml  setup-wizard.sh  test-wasm-fix.sh
.github/workflows/: ci.yml
backends/cpu/: Cargo.toml
backends/cpu/src/: lib.rs
backends/dx12/: Cargo.toml
backends/dx12/src/: lib.rs
backends/metal/: Cargo.toml
backends/metal/src/: lib.rs
backends/vulkan/: Cargo.toml
backends/vulkan/src/: lib.rs
backends/webgpu/: Cargo.toml
backends/webgpu/src/: lib.rs
benchmark-results/: benchmark_20251028_223544.json  benchmark_20251028_223544.md
core/: Cargo.toml
core/src/: error.rs  gpu.rs  lib.rs  quantization.rs  tensor.rs  transformer.rs
docs/: API_GUIDE.md  BUILD_GUIDE.md  QUICK_REFERENCE.md  README.md  WASM_GUIDE.md
examples/: complete-workflow.rs
examples/simple-inference/: Cargo.toml
examples/simple-inference/src/: main.rs
scripts/: benchmark.sh  deploy-native.sh  deploy-wasm.sh  new-backend.sh  verify.sh
tests/: integration_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
