[workspace]
resolver = "2"
members = [
    "core",
    "backends/webgpu",
    "backends/vulkan",
    "backends/metal",
    "backends/dx12",
    "backends/cpu",
    "examples/simple-inference",
    "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CrossGPU Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hmthanh/CrossGPU"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
half = "2.3"

# GPU backends
wgpu = "0.19"
vulkano = "0.34"
metal = "0.27"
windows = { version = "0.52", features = ["Win32_Graphics_Direct3D12"] }

# CPU compute
ndarray = { version = "0.15", features = ["blas"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Async runtime (for GPU operations)
tokio = { version = "1.35", features = ["rt", "rt-multi-thread"] }
futures = "0.3"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Gpu"] }
console_error_panic_hook = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
