[package]
name = "crossgpu-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }

[dev-dependencies]
approx = "0.5"
