[package]
name = "crossgpu-backend-dx12"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossgpu-core = { path = "../../core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
