[package]
name = "crossgpu-backend-metal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossgpu-core = { path = "../../core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true }
objc = "0.2"
