[package]
name = "crossgpu-backend-webgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossgpu-core = { path = "../../core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
